# kalman_imu_model

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  Makefile  main.cpp  plant_config.cfg  sensor_config.cfg
src/include/: plant.cpp  plant.h  world.cpp  world.h
src/include/math/: kmath.cpp  kmath.h
src/include/sensor/: sensor.cpp  sensor.h
